k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorty-service-stable
  labels:
    app: shorty-service
    version: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shorty-service
      version: stable
  template:
    metadata:
      labels:
        app: shorty-service
        version: stable
    spec:
      containers:
        - name: shorty-service
          image: ghcr.io/roei2212/shorty-service:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
