k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorty-service
spec:
  selector:
    app: shorty-service
  ports:
    - port: 80
      targetPort: 8000
