k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shorty-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
    - host: shorty.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shorty-service
                port:
                  number: 80
